--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'Cache'
-description: 'Cache artifacts like dependencies and build outputs to improve workflow execution time'
+description: 'Fork of actions/cache which always saves cache'
 author: 'GitHub'
 inputs:
   path:
