--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cache",
-  "version": "1.1.2",
+  "name": "always-upload-cache",
+  "version": "1.2.0",
   "private": true,
   "description": "Cache dependencies and build outputs",
   "main": "dist/restore/index.js",
